add paginate for AllBrand
